@@ -125,7 +125,13 @@ be sent to standard output\.
 .PP
 \fB\-\-file_format\fR \fIFORMAT\fR
 .RS 4
-Specify the output file format. Valid values are: PEF, DNG, JPEG. It also changes the default file format in the camera.\.
+Specify the output file format. Valid values are: PEF, DNG, JPEG. It
+also changes the default file format in the camera.\.
+.RE
+.PP
+\fB\-\-color_space\fR \fICOLOR_SPACE\fR
+.RS 4
+Specify the color space. Valid values are: sRGB, AdobeRGB\.
 .RE
 .PP
 \fB\-q\fR,\fB\-\-quality\fR \fIQUALITY\fR
