@@ -1,0 +1,42 @@
+/*
+    pkTriggerCord
+    Copyright (C) 2011 Andras Salamon <andras.salamon@melda.info>
+    Remote control of Pentax DSLR cameras.
+
+    based on:
+
+    PK-Remote
+    Remote control of Pentax DSLR cameras.
+    Copyright (C) 2008 Pontus Lidman <pontus@lysator.liu.se>
+
+    PK-Remote for Windows
+    Copyright (C) 2010 Tomasz Kos
+
+    This program is free software: you can redistribute it and/or modify
+    it under the terms of the GNU General Public License as published by
+    the Free Software Foundation, either version 3 of the License, or
+    (at your option) any later version.
+
+    This program is distributed in the hope that it will be useful,
+    but WITHOUT ANY WARRANTY; without even the implied warranty of
+    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+    GNU General Public License for more details.
+
+    You should have received a copy of the GNU General Public License
+    along with this program.  If not, see <http://www.gnu.org/licenses/>.
+ */
+#ifndef PSLR_ENUM_H
+#define PSLR_ENUM_H
+
+typedef enum {
+    PSLR_COLOR_SPACE_SRGB,
+    PSLR_COLOR_SPACE_ADOBERGB,
+    PSLR_COLOR_SPACE_MAX
+} pslr_color_space_t;
+
+int find_in_array( const char** array, int length, char* str );
+
+pslr_color_space_t get_pslr_color_space( char *str );
+const char *get_pslr_color_space_str( pslr_color_space_t value );
+
+#endif
